Fix x-overflow

--- a/assets/css/layout/page.css
+++ b/assets/css/layout/page.css
@@ -31,6 +31,7 @@ body {
   max-width: $width;
   height: 100%;
   min-height: 100vh;
+  box-sizing: border-box;
   padding-right: 2rem;
   padding-bottom: 50px;
   padding-left: 2rem;
